some final touches :)

--- a/public/index.ejs
+++ b/public/index.ejs
@@ -13,7 +13,7 @@
 
     <body>
 
-        <form action="/quotes" method="post">
+        <form action="/quotes" method="post" >
             <input type="text" placeholder="quoteId" name="quoteId">
             <input type="text" placeholder="author" name="author">
             <input type="text" placeholder="title" name="title">
@@ -67,15 +67,15 @@
                             window.location.reload()
                         })
                     })
-                    const postQuote = document.querySelector('#postQuote')
+                    // const postQuote = document.querySelector('#postQuote')
 
-                    postQuote.addEventListener('click', (e) => {
-                        // e.preventDefault()
+                    // postQuote.addEventListener('click', (e) => {
+                    //     // e.preventDefault()
 
-                        window.location.href = `${window.location.origin}/quotes`
+                    //     window.location.href = `${window.location.origin}/quotes`
 
-                    })
-
+                    // })
+                        
                 </script>
 
     </body>
